[project]
name = "unlucky_house_finder"
version = "0.1.0"
description = "Find unlucky houses in Taiwan in a better way."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]",
    "google-generativeai",
    "regex",
    "scrapy",
]

[tool.uv]
dev-dependencies = [
    "scrapyd",
]
